[package]
name = "scale-value-to-borrowed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# scale-value="*"
scale-value={git="https://github.com/gilescope/scale-value.git", branch="wasm32" }
# scale-value = {path="/home/gilescope/git/scale-value" }
scale-borrow = { git="https://github.com/gilescope/scale-borrow.git", rev = "02d9bc38564efb387215ec3cd96a33b3f3314453" }

[features]
bitvec = ["scale-borrow/bitvec"]