[package]
name = "scale-value-to-borrowed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# scale-value="*"
scale-value = {  git="https://github.com/paritytech/scale-value.git",  default-features = false, features = [] }
# scale-value={git="https://github.com/gilescope/scale-value.git", branch="wasm32" }
# scale-value = {path="/home/gilescope/git/scale-value" }
scale-borrow = { git="https://github.com/gilescope/scale-borrow.git", rev = "2cfe19457765ae68e5c57a303abe80ae7ced6c7e" }

[features]
bitvec = ["scale-borrow/bitvec"]