[package]
name = "scale-value-to-borrowed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# scale-value="*"
scale-value = {  git="https://github.com/paritytech/scale-value.git",  default-features = false, features = [] }
# scale-value={git="https://github.com/gilescope/scale-value.git", branch="wasm32" }
# scale-value = {path="/home/gilescope/git/scale-value" }
scale-borrow = { git="https://github.com/gilescope/scale-borrow.git", rev = "a342a594c4ee8d6946f07c4229c503798f0a71da", features= ["bitvec"] }
